--- a/public/checkout.html
+++ b/public/checkout.html
@@ -27,28 +27,62 @@
         
     </div>
 
+     <h2>Checkout</h2>
+    <div id="product-details">
+        <img id="product-img" src="" alt="Product Image" width="200">
+        <p><strong>Product:</strong> <span id="product-name"></span></p>
+        <p><strong>Price:</strong> GHS <span id="product-price"></span></p>
+        <p>
+            <strong>Quantity:</strong>
+            <input type="number" id="product-quantity" value="1" min="1">
+        </p>
+        <p><strong>Total:</strong> GHS <span id="total-price"></span></p>
+        <button id="pay-now-btn">Pay Now</button>
+        <button id="back-button">Back to Products</button>
+    </div>
+
 
 
 
 <!-- footer -->
 
-<footer class="footer_page">
-        <div class="logo">
-            <p><a href="">SupaMart</a></p>
-        </div>
-        <div class="inner">
-            <div class="left_side">
-                <h2>Useful links</h2>
-                <ul class="nav-links">
-                    <li><a href="">career</a></li>
-                    <li><a href="">support</a></li>
-                    <li><a href="">Media</a></li>
+ <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>ShopEase</h3>
+                <p>Buy all mobile phone brand at one shopEase.</p>
+            </div>
+            <div class="footer-column">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#products">Shop</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
-            <div class="right_side">
-                <h2>Contact</h2>
-
+            <div class="footer-column">
+                <h4>Contact Us</h4>
+                <p>Email: support@shopease.com</p>
+                <p>Phone: +233 542900630</p>
+                <p>Address: Accra, Ghana</p>
             </div>
+            <div class="footer-column">
+                <h4>Stay Connected</h4>
+                <div class="social-icons">
+                    <a href="#"><img src="icons/facebook.svg" alt="Facebook" /></a>
+                    <a href="#"><img src="icons/instagram.png" alt="Twitter" /></a>
+                    <a href="#"><img src="icons/whatsapp.svg" alt="Instagram" /></a>
+                </div>
+                <form class="newsletter">
+                    <input type="email" placeholder="Subscribe to newsletter" required />
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 ShopEase. All rights reserved.</p>
         </div>
     </footer>
 
