--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                     <p class="new-price">Ghs 2000</p>
                 </div>
                 <div class="btns">
-                    <button >order now</button>
+                    <button class="order-btn">order now</button>
                     <button ><a href="spec.html">view spec</a></button>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                     <p class="new-price">Ghs 2000</p>
                 </div>
                 <div class="btns">
-                    <button >order now</button>
+                    <button class="order-btn">order now</button>
                     <button ><a href="spec.html">view spec</a></button>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                     <p class="new-price">Ghs 2000</p>
                 </div>
                 <div class="btns">
-                    <button >order now</button>
+                    <button class="order-btn">order now</button>
                     <button ><a href="spec.html">view spec</a></button>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                     <p class="new-price">Ghs 2000</p>
                 </div>
                 <div class="btns">
-                    <button >order now</button>
+                    <button class="order-btn">order now</button>
                     <button ><a href="spec.html">view spec</a></button>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                     <p class="new-price">Ghs 2000</p>
                 </div>
                 <div class="btns">
-                    <button >order now</button>
+                    <button class="order-btn" >order now</button>
                     <button ><a href="spec.html">view spec</a></button>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <p class="new-price">Ghs 2000</p>
                 </div>
                 <div class="btns">
-                    <button >order now</button>
+                    <button class="order-btn">order now</button>
                     <button ><a href="spec.html">view spec</a></button>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     <p class="new-price">Ghs 2000</p>
                 </div>
                 <div class="btns">
-                    <button >order now</button>
+                    <button class="order-btn" >order now</button>
                     <button ><a href="spec.html">view spec</a></button>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                     <p class="new-price">Ghs 2000</p>
                 </div>
                 <div class="btns">
-                    <button >order now</button>
+                    <button class="order-btn" >order now</button>
                     <button ><a href="spec.html">view spec</a></button>
                 </div>
             </div>
