--- a/public/checkout.html
+++ b/public/checkout.html
@@ -17,6 +17,7 @@
                 &#9776;
             </div>
             <ul class="nav-links" id="navLinks">
+                <li class="close-btn" onclick="toggleMenu()">&times;</li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="orders.html">Orders</a></li>
                 <li><a href="checkout.html">Checkout</a></li>
@@ -37,8 +38,10 @@
             <input type="number" id="product-quantity" value="1" min="1">
         </p>
         <p><strong>Total:</strong> GHS <span id="total-price"></span></p>
-        <button id="pay-now-btn">Pay Now</button>
-        <button id="back-button">Back to Products</button>
+        <div class="checkBtns">
+            <button id="back-button">Back</button>
+            <button id="pay-now-btn">Pay Now</button>
+        </div>
     </div>
 
 
@@ -49,8 +52,8 @@
  <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
-                <h3>ShopEase</h3>
-                <p>Buy all mobile phone brand at one shopEase.</p>
+                <h3>CampusPlug</h3>
+                <p>Buy all mobile phone brand at one CampusPlug.</p>
             </div>
             <div class="footer-column">
                 <h4>Quick Links</h4>
@@ -64,7 +67,7 @@
             </div>
             <div class="footer-column">
                 <h4>Contact Us</h4>
-                <p>Email: support@shopease.com</p>
+                <p>Email: taopheeqagboh00@gmail.com</p>
                 <p>Phone: +233 542900630</p>
                 <p>Address: Accra, Ghana</p>
             </div>
@@ -82,7 +85,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 ShopEase. All rights reserved.</p>
+            <p>&copy; 2025 CampusPlug. All rights reserved.</p>
         </div>
     </footer>
 
