--- a/public/spec.html
+++ b/public/spec.html
@@ -28,32 +28,38 @@
 
     <div class="container">
         <h1>Device Specifications</h1>
-        <dl class="specs">
-            <dt>Device Name:</dt>
-            <dd>Example Device</dd>
-            <dt>Brand:</dt>
-            <dd>Example Brand</dd>
-            <dt>Model:</dt>
-            <dd>XYZ123</dd>
-            <dt>Processor:</dt>
-            <dd>Octa-Core 2.3GHz</dd>
-            <dt>RAM:</dt>
-            <dd>8GB</dd>
-            <dt>Storage:</dt>
-            <dd>128GB</dd>
-            <dt>Display:</dt>
-            <dd>6.5-inch AMOLED</dd>
-            <dt>Battery:</dt>
-            <dd>4500mAh</dd>
-            <dt>Camera:</dt>
-            <dd>48MP + 12MP + 5MP (Rear), 16MP (Front)</dd>
-            <dt>Operating System:</dt>
-            <dd>Android 12</dd>
-        </dl>
-        <div class="btns">
-            <button id="back-button">Back</button>
-            <button id="pay-button">order now</button>
+        <div class="specs-image-row">
+            <dl class="specs">
+                <dt>Device Name:</dt>
+                <dd></dd>
+                <dt>Brand:</dt>
+                <dd></dd>
+                <dt>Model:</dt>
+                <dd></dd>
+                <dt>Processor:</dt>
+                <dd>Octa-Core 2.3GHz</dd>
+                <dt>RAM:</dt>
+                <dd>8GB</dd>
+                <dt>Storage:</dt>
+                <dd>128GB</dd>
+                <dt>Display:</dt>
+                <dd>6.5-inch AMOLED</dd>
+                <dt>Battery:</dt>
+                <dd>4500mAh</dd>
+                <dt>Camera:</dt>
+                <dd>48MP + 12MP + 5MP (Rear), 16MP (Front)</dd>
+                <dt>Operating System:</dt>
+                <dd>Android 12</dd>
+            </dl>
+            <div class="product-image-container">
+                <img id="product-image" src="" alt="Product Image" style="max-width:300px; max-height:300px; display:none;" />
+            </div>
         </div>
+        <button id="back-button">Back</button>
+        <!-- <div class="btns">
+            <button id="back-button">Back</button>
+            <button id="order-button">order now</button>
+        </div> -->
     </div>
 
     <!-- footer -->
