--- a/public/laptops.html
+++ b/public/laptops.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>orders</title>
+    <title>CampusPlug|laptops</title>
 </head>
 <body>
     <div class="header">
         <nav>
             <div class="logo">
-                <p><a href="">SupaMart</a></p>
+                <img src="images/logo.jpg" alt="">
+                <p><a href="">CampusPlug</a></p>
             </div>
             <div class="hamburger-menu" onclick="toggleMenu()">
                 &#9776;
@@ -26,34 +27,56 @@
         </nav>
         
     </div>
-    
-
-    <main class="orders-section">
-        <h2>Your Orders</h2>
-        <table class="orders-table">
-            <thead>
-                <tr>
-                    <th>Order ID</th>
-                    <th>Product Name</th>
-                    <th>Quantity</th>
-                    <th>Date</th>
-                    <th>Status</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody id="ordersBody">
-                <!-- Populated by JS -->
-            </tbody>
-        </table>
-        <div id="noOrders" style="display:none; text-align:center; margin-top:2rem;">
-            <p>You have no orders yet. <a href="index.html">Shop now!</a></p>
+    <section class="products" id="products">
+        <div class="search">
+            <input type="text" name="search" id="search-input" placeholder="phone,laptops, tablets ...">
+            <button type="button" class="search-btn">Search</button>
+        </div>
+        <h2>Hot deals</h2>
+        <div class="product-row">
+            <div class="product1">
+                <h3>MacBook Pro 16"</h3>
+                <img src="images/macbookpro 14.3.jpeg" alt="">
+                <div class="prices">
+                    <p class="old-price">Ghs 5000</p>
+                    <p class="new-price">Ghs 4500</p>
+                </div>
+                <div class="btns">
+                    <button class="order-btn">Order Now</button>
+                    <button class="spec-btn" onclick="viewSpec('MacBook pr 16', 'images/macbookpro 14.3.jpg', 'Ghs 4,500')"><a href="spec.html">View Spec</a></button>
+                </div>
+            </div>
+            <div class="product1">
+                <h3>MacBook Pro 16"</h3>
+                <img src="images/macbook pro 13.jpeg" alt="">
+                <div class="prices">
+                    <p class="old-price">Ghs 5000</p>
+                    <p class="new-price">Ghs 4500</p>
+                </div>
+                <div class="btns">
+                    <button class="order-btn">Order Now</button>
+                    <button class="spec-btn" onclick="viewSpec('MacBook pro 16', 'images/macbook pro 13.jpg', 'Ghs 4,500')"><a href="spec.html">View Spec</a></button>
+                </div>
+            </div>
+            <div class="product1">
+                <h3>MacBook Pro 16"</h3>
+                <img src="images/macbook refur.jpeg" alt="">
+                <div class="prices">
+                    <p class="old-price">Ghs 5000</p>
+                    <p class="new-price">Ghs 4500</p>
+                </div>
+                <div class="btns">
+                    <button class="order-btn">Order Now</button>
+                    <button class="spec-btn" onclick="viewSpec('macbook pro 16', 'images/macbook refur.jpg', 'Ghs 4,500')"><a href="spec.html">View Spec</a></button>
+                </div>
+            </div>
+            <!-- Add more laptop products as needed -->
         </div>
 
-    </main>
 
 
-    <!-- footer -->
-    <footer class="footer">
+        <!-- footer -->
+         <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
                 <h3>CampusPlug</h3>
