--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
             </div>
         </div>
     </section>
-
+<!-- footer -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
