--- a/public/admin.html
+++ b/public/admin.html
@@ -95,8 +95,8 @@
             </div>
             <div class="footer-column">
                 <h4>Contact Us</h4>
-                <p>Email: taopheeqagboh00@gmail.com</p>
-                <p>Phone: +233 542900630</p>
+                <p>Email: campusplug@gmail.com</p>
+                <p>Phone: +233 550000000</p>
                 <p>Address: Accra, Ghana</p>
             </div>
             <div class="footer-column">
