--- a/public/checkout.html
+++ b/public/checkout.html
@@ -67,8 +67,8 @@
             </div>
             <div class="footer-column">
                 <h4>Contact Us</h4>
-                <p>Email: taopheeqagboh00@gmail.com</p>
-                <p>Phone: +233 542900630</p>
+                <p>Email: campusplus@gmail.com</p>
+                <p>Phone: +233 5500000000</p>
                 <p>Address: Accra, Ghana</p>
             </div>
             <div class="footer-column">
