--- a/public/spec.html
+++ b/public/spec.html
@@ -56,18 +56,15 @@
             </div>
         </div>
         <button id="back-button">Back</button>
-        <!-- <div class="btns">
-            <button id="back-button">Back</button>
-            <button id="order-button">order now</button>
-        </div> -->
+        
     </div>
 
     <!-- footer -->
-     <footer class="footer">
+    <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
-                <h3>ShopEase</h3>
-                <p>Buy all mobile phone brand at one shopEase.</p>
+                <h3>CampusPlug</h3>
+                <p>Buy all mobile phone brand at one CampusPlug.</p>
             </div>
             <div class="footer-column">
                 <h4>Quick Links</h4>
@@ -81,8 +78,8 @@
             </div>
             <div class="footer-column">
                 <h4>Contact Us</h4>
-                <p>Email: support@shopease.com</p>
-                <p>Phone: +233 542900630</p>
+                <p>Email: campusplug@gmail.com</p>
+                <p>Phone: +233 550000000</p>
                 <p>Address: Accra, Ghana</p>
             </div>
             <div class="footer-column">
@@ -99,7 +96,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 ShopEase. All rights reserved.</p>
+            <p>&copy; 2025 CampusPlug. All rights reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
