updated the contact

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -42,6 +42,7 @@
             <button id="back-button">Back</button>
             <button id="pay-now-btn">Pay Now</button>
         </div>
+        <!-- <button id="add-to-cart">Add to cart</button> -->
     </div>
 
 
