--- a/public/index.html
+++ b/public/index.html
@@ -158,8 +158,8 @@
             <div class="footer-column">
                 <h4>Contact Us</h4>
                 <p>Email: campusplug@gmail.com</p>
-                <p>Phone: +233 550000000</p>
-                <p>Address: Accra, Ghana</p>
+                <p>Phone: +233 542900630</p>
+                <p>Address: Cape coast,ucc campus, Ghana</p>
             </div>
             <div class="footer-column">
                 <h4>Stay Connected</h4>
